реализация + tests